--- a/bsconfig.json
+++ b/bsconfig.json
@@ -23,7 +23,9 @@
   "suffix": ".bs.js",
   "bs-dependencies": [
       // add your dependencies here. You'd usually install them normally through `npm install my-dependency`. If my-dependency has a bsconfig.json too, then everything will work seamlessly.
+      "reason-react",
   ],
+  "reason": { "react-jsx": 2 },
   "warnings": {
     "error" : "+101"
   },
