--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "devDependencies": {
     "bs-platform": "^4.0.5",
     "node-static": "^0.7.10"
+  },
+  "dependencies": {
+    "reason-react": "^0.5.3"
   }
 }
