--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
   "name": "reactor",
   "version": "0.1.0",
-  "scripts": {
-    "build": "bsb -make-world",
-    "start": "bsb -make-world -w",
-    "clean": "bsb -clean-world"
-  },
   "keywords": [
     "BuckleScript"
   ],
@@ -13,9 +8,7 @@
   "license": "MIT",
   "devDependencies": {
     "bs-platform": "^4.0.5",
-    "node-static": "^0.7.10"
-  },
-  "dependencies": {
+    "node-static": "^0.7.10",
     "reason-react": "^0.5.3"
   }
 }
