+[meta] Namespace package

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,8 +1,8 @@
 // This is the configuration file used by BuckleScript's build system bsb. Its documentation lives here: http://bucklescript.github.io/bucklescript/docson/#build-schema.json
 // BuckleScript comes with its own parser for bsconfig.json, which is normal JSON, with the extra support of comments and trailing commas.
 {
-  "name": "reactor",
-  "version": "0.1.0",
+  "name": "@ostera/reactor",
+  "version": "0.0.1-alpha",
   "sources": [{
     "dir" : "examples",
     "subdirs" : true
@@ -17,7 +17,7 @@
     "subdirs" : true
   }],
   "package-specs": {
-    "module": "es6-global",
+    "module": "commonjs",
     "in-source": false
   },
   "suffix": ".bs.js",
