--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Leandro Ostera <leandro@ostera.io>",
   "license": "MIT",
   "devDependencies": {
+    "@ostera/rebench": "^0.0.1-alpha",
     "bs-platform": "^4.0.5",
     "node-static": "^0.7.10",
     "reason-react": "^0.5.3"
