+[examples] Update all examples

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -17,7 +17,7 @@
     "subdirs" : true
   }],
   "package-specs": {
-    "module": "commonjs",
+    "module": "es6-global",
     "in-source": false
   },
   "suffix": ".bs.js",
