--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "author": "Leandro Ostera <leandro@ostera.io>",
   "license": "MIT",
   "devDependencies": {
-    "rebench": "^0.0.2-alpha",
-    "bs-platform": "^4.0.5",
+    "bs-platform": "^4.0.7",
     "node-static": "^0.7.10",
+    "rebench": "^0.0.2-alpha",
+    "bsdoc": "^0.1.0"
+  },
+  "dependencies": {
     "reason-react": "^0.5.3"
   }
 }
