--- a/package.json
+++ b/package.json
@@ -9,24 +9,22 @@
     "NOTE": "Optional release Section. Customizes result of `esy release`",
     "release": { "bin": [ "Hello.exe" ] }
   },
+  "scripts": {
+    "open-docs": "open #{self.target_dir}/default/_doc/_html/index.html"
+  },
   "dependencies": {
     "@esy-ocaml/reason": "*",
     "@opam/fmt": "*",
     "@opam/logs": "*",
     "@opam/lwt": "4.1.0",
+    "@opam/odoc": "1.3.0",
     "ocaml": "~4.6.0",
     "refmterr": "*"
   },
   "resolutions": {
-    "@opam/httpkit": "ostera/httpkit:httpkit.opam#c1c32c1",
-    "@opam/httpkit-lwt": "ostera/httpkit:httpkit-lwt.opam#c1c32c1",
-    "@opam/httpaf": "anmonteiro/httpaf:httpaf.opam#57e9dd2",
-    "@opam/httpaf-lwt": "anmonteiro/httpaf:httpaf-lwt.opam#57e9dd2"
   },
   "devDependencies": {
     "@opam/dune": "*",
-    "@opam/httpkit": "*",
-    "@opam/httpkit-lwt": "*",
     "@opam/merlin": "*",
     "ocaml": "~4.6.0"
   }
