--- a/test/runtime/dune
+++ b/test/runtime/dune
@@ -1,4 +1,4 @@
 (executable
   (name runtime_test)
-  (libraries reactor reactor.scheduler
+  (libraries reactor.scheduler
     logs logs.fmt fmt fmt.tty))
