--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "license": "MIT",
   "esy": {
     "build": "refmterr dune build -p #{self.name}",
-    "NOTE": "Optional release Section. Customizes result of `esy release`",
-    "release": { "bin": [ "Hello.exe" ] }
+    "NOTE": ""
   },
   "scripts": {
     "open-docs": "open #{self.target_dir}/default/_doc/_html/index.html"
@@ -17,15 +16,16 @@
     "@opam/fmt": "*",
     "@opam/logs": "*",
     "@opam/lwt": "4.1.0",
-    "@opam/odoc": "1.3.0",
-    "ocaml": "~4.6.0",
+    "@opam/odoc": "*",
+    "ocaml": "~4.7.0",
     "refmterr": "*"
   },
   "resolutions": {
+    "@opam/odoc": "link:../odoc/odoc.opam"
   },
   "devDependencies": {
     "@opam/dune": "*",
     "@opam/merlin": "*",
-    "ocaml": "~4.6.0"
+    "ocaml": "~4.7.0"
   }
 }
