--- a/test/runtime/dune
+++ b/test/runtime/dune
@@ -1,5 +1,3 @@
-(executable
-  (name async_test)
-  (libraries
-    reactor
-    logs logs.fmt fmt fmt.tty))
+(tests
+  (names async_test runtime_test)
+  (libraries reactor logs logs.fmt fmt fmt.tty))
