--- a/src/reactor/dune
+++ b/src/reactor/dune
@@ -1,11 +1,5 @@
 (library
-  (name reactor)
-  (public_name reactor)
-  (libraries
-    reactor.model
-    reactor.scheduler
-    reactor.platform
-    reactor.bytecode
-    unix
-    logs logs.fmt fmt fmt.tty
-    ))
+ (name reactor)
+ (public_name reactor)
+ (libraries reactor.model reactor.scheduler reactor.platform reactor.bytecode
+   unix logs logs.fmt fmt fmt.tty))
