[meta] Add lwt as a dependency

--- a/reactor.opam
+++ b/reactor.opam
@@ -10,6 +10,7 @@ bug-reports: "https//github.com/ostera/reactor/issues"
 depends: [
   "fmt"
   "logs"
+  "lwt"
 
   "dune" {build}
   "reason" {build}
