[core] Split Scheduler into Node/Coordinator/Tasks/Scheduler libraries

--- a/src/scheduler/dune
+++ b/src/scheduler/dune
@@ -1,4 +1,4 @@
 (library
- (name scheduler)
+ (name reactor_scheduler)
  (public_name reactor.scheduler)
- (libraries reactor.model reactor.bytecode platform logs unix lwt lwt.unix))
+ (libraries reactor.coordinator reactor.task_queue reactor.process reactor.bytecode platform logs unix lwt lwt.unix))
