--- a/src/scheduler/dune
+++ b/src/scheduler/dune
@@ -1,4 +1,4 @@
 (library
- (name reactor_scheduler)
+ (name scheduler)
  (public_name reactor.scheduler)
  (libraries reactor.coordinator reactor.task_queue reactor.process reactor.bytecode platform logs unix lwt lwt.unix))
