--- a/src/node/dune
+++ b/src/node/dune
@@ -1,4 +1,4 @@
 (library
- (name reactor_node)
+ (name node)
  (public_name reactor.node)
  (libraries reactor.platform reactor.process reactor.scheduler reactor.task_queue))
