--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@esy-ocaml/reason": "*",
     "@opam/alcotest": "0.8.5",
     "@opam/benchmark": "1.6",
+    "@opam/dune": "1.8.2",
     "@opam/fmt": "*",
     "@opam/logs": "*",
     "@opam/lwt": "*",
